--- a/Client.Blazor/Pages/Register.razor
+++ b/Client.Blazor/Pages/Register.razor
@@ -28,7 +28,7 @@
 
 @code {
 
-    private string apiUrl = "https://localhost:5002/api/user";
+    private string apiUrl = "http://localhost:5003/api/user";
     private User user = new User();
     private async void RegisterUser()
     {
