--- a/Client.Blazor/Pages/Index.razor
+++ b/Client.Blazor/Pages/Index.razor
@@ -1,5 +1,12 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>TrotIS - Rent a scooter</h1>
 
-Welcome to your new app.
+<ul>
+	<li>Posibilitate închiriere trotinete electrice cu ajutorul unui card virtual/fizic</li>
+	<li>Diferite tipuri de abonamente (studenți, pensionari, standard, angajați ai companiilor partenere)</li>
+	<li>Trotinete disponibile la un moment dat (număr, detalii)</li>
+	<li>Status trotinetă închiriată (baterie, ore totale folosite...)</li>
+	<li>Confirmare închiriere prin sms sau email</li>
+	<li>Căutare locații trotinete în apropiere</li>
+</ul>
