--- a/Client.Blazor/Pages/FetchData.razor
+++ b/Client.Blazor/Pages/FetchData.razor
@@ -3,9 +3,8 @@
 @using Client.Blazor.Data
 @inject WeatherForecastService ForecastService
 
-<h1>Weather forecast</h1>
+<h1>Locations</h1>
 
-<p>This component demonstrates fetching data from a service.</p>
 
 @if (forecasts == null)
 {
