--- a/Client.Blazor/Shared/MainLayout.razor
+++ b/Client.Blazor/Shared/MainLayout.razor
@@ -1,15 +1,31 @@
 ﻿@inherits LayoutComponentBase
-
+@inject Blazored.SessionStorage.ISessionStorageService sessionStorage
 <div class="sidebar">
     <NavMenu />
 </div>
 
 <div class="main">
-    <div class="top-row px-4">
-        <a href="/login" >Login</a>
-    </div>
+    @if (name != String.Empty)
+    {
+        <div class="top-row px-4">
+            <a href="/login">Hello, @name</a>
+        </div>
+    }
+    else
+    {
+        <div class="top-row px-4">
+            <a href="/login">Login</a>
+        </div>
+    }
 
     <div class="content px-4">
         @Body
     </div>
 </div>
+@code{
+    public string name = String.Empty;
+    protected async override void OnInitialized()
+    {
+        name = await sessionStorage.GetItemAsync<string>("firstname");
+    }
+}
