--- a/Client.Blazor/Pages/Register.razor
+++ b/Client.Blazor/Pages/Register.razor
@@ -3,56 +3,205 @@
 @using TrotIS.Shared
 @using Microsoft.AspNetCore.Components;
 @inject NavigationManager navManager
+@inject IJSRuntime jsRuntime
+
+<!-- Navbar-->
+<header class="header">
+    <nav class="navbar navbar-expand-lg navbar-light py-3">
+        <div class="container">
+            <!-- Navbar Brand -->
+            <a href="#" class="navbar-brand">
+                TrotIS logo
+                @*<img src="https://res.cloudinary.com/mhmd/image/upload/v1571398888/Group_1514_tjekh3_zkts1c.svg" alt="logo" width="150">*@
+            </a>
+        </div>
+    </nav>
+</header>
 
 
-<h3>Register</h3>
+<div class="container">
+    <div class="row py-5 mt-4 align-items-center">
+        <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
+            <img src="https://res.cloudinary.com/mhmd/image/upload/v1569543678/form_d9sh6m.svg" alt="" class="img-fluid mb-3 d-none d-md-block">
+            <h1>Create an Account</h1>
+        </div>
 
-<div class="row">
-    <div class="col-md-4">
+        <!-- Registeration Form -->
+        <div class="col-md-7 col-lg-6 ml-auto">
+            <form action="#">
+                <div class="row">
+
+                    <!-- First Name -->
+                    <div class="input-group col-lg-6 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-user text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="firstName" type="text" name="firstname" @bind="user.FirstName" placeholder="First Name" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    <!-- Last Name -->
+                    <div class="input-group col-lg-6 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-user text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="lastName" type="text" name="lastname" @bind="user.LastName" placeholder="Last Name" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    <!-- Email Address -->
+                    <div class="input-group col-lg-12 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-envelope text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="email" type="email" name="email" @bind="user.Email" placeholder="Email Address" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    <!-- Phone Number -->
+                    <div class="input-group col-lg-12 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-phone-square text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="phoneNumber" type="tel" name="phone" @bind="user.Phone" placeholder="Phone Number" class="form-control bg-white border-md border-left-0 pl-3">
+                    </div>.
+
+
+                    <!-- Job -->
+                    <div class="input-group col-lg-12 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-black-tie text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="socialclass" type="text" name="password" @bind="user.SocialClass" placeholder="Social class" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    
+
+                    <!-- Birthday -->
+                    <div class="input-group col-lg-12 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-birthday-cake text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="birthday" type="date" name="birthday" @bind="user.BirthDay" placeholder="Birthday" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    <!-- Password -->
+                    <div class="input-group col-lg-6 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-lock text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="password" type="password" name="password" @bind="user.Password" placeholder="Password" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    <!-- Password Confirmation -->
+                    <div class="input-group col-lg-6 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-lock text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="passwordConfirmation" type="password" name="passwordConfirmation" @bind="user.PasswordConfirmation" placeholder="Confirm Password" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    <!-- Submit Button -->
+                    <div class="form-group col-lg-12 mx-auto mb-0">
+                        <a href="#" class="btn btn-primary btn-block py-2" @onclick="@RegisterUser">
+                            <span class="font-weight-bold">Create your account</span>
+                        </a>
+                    </div>
+
+                    <!-- Line -->
+                    <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
+                        <div class="border-bottom w-100 ml-5"></div>
+                        @*<span class="px-2 small text-muted font-weight-bold text-muted">OR</span>*@
+                        <div class="border-bottom w-100 mr-5"></div>
+                    </div>
+
+                    <!-- Already Registered -->
+                    <div class="text-center w-100">
+                        <p class="text-muted font-weight-bold">Already registered? <a href="#" class="text-primary ml-2" @onclick="NavigateToLoginComponent">Login</a></p>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+@*<div class="row">
+        <div class="col-md-4">
             <label for="email">Email </label><input id="email" type="email" name="email" @bind="user.Email" placeholder="Email..."><br>
             <label for="password">Password </label><input id="password" type="password" name="password" @bind="user.Password" placeholder="Password..."><br>
             <label for="firstname">First name </label><input id="firstname" type="text" name="firstname" @bind="user.FirstName" placeholder="First Name"><br>
             <label for="lastname">Last name </label><input id="lastname" type="text" name="lastname" @bind="user.LastName" placeholder="Last Name"><br>
             <label for="phone">Phone </label><input id="phone" type="text" name="phone" @bind="user.Phone" placeholder="Phone..."><br>
-            <label for="birthday">Email </label><input id="birthday" type="date" name="birthday" @bind="user.BirthDay" placeholder="Birthday"><br>
+            <label for="birthday">Birthday </label><input id="birthday" type="date" name="birthday" @bind="user.BirthDay" placeholder="Birthday"><br>
             <label for="socialclass">Social class </label><input id="socialclass" type="text" name="socialclass" @bind="user.SocialClass" placeholder="Social class"><br>
             <button @onclick="@RegisterUser">Register</button>
-    </div>
-</div>
-<div>
-    Already have an account?       <button class="btn btn-primary" @onclick="NavigateToLoginComponent">
-        Login
-    </button>
-</div>
+        </div>
+    </div>*@
+@*<div>
+        Already have an account?       <button class="btn btn-primary" @onclick="NavigateToLoginComponent">
+            Login
+        </button>
+    </div>*@
 
 
 @code {
+	private async Task ShowAlert(string message)
+	{
+		await jsRuntime.InvokeAsync<object>("ShowAlert", message);
+	}
 
-    private string apiUrl = "http://localhost:5003/api/user";
-    private User user = new User();
-    private async void RegisterUser()
-    {
-        user.UserId = Guid.NewGuid();
-        user.Address = null;
-        await Http.PostAsJsonAsync(apiUrl, user);
-        navManager.NavigateTo("/", true);
-    }
-    private void NavigateToLoginComponent()
-    {
-        navManager.NavigateTo("/login", true);
-    }
+	private string apiUrl = "http://localhost:5003/api/user";
+	private User user = new User();
+	private async void RegisterUser()
+	{
+		//verify password
 
-    public class User
-    {
-        public Guid UserId { get; set; }
-        public string Email { get; set; }
-        public string Password { get; set; }
-        public string FirstName { get; set; }
-        public string LastName { get; set; }
-        public string Phone { get; set; }
-        public DateTime BirthDay { get; set; }
-        public EnumLists.SocialClass SocialClass { get; set; }
-        public virtual Address Address { get; set; }
-    }
+        //verify if email already exists
+
+        //verify if phone number already exists
+		if (user.Password == user.PasswordConfirmation)
+		{
+			user.UserId = Guid.NewGuid();
+			user.Address = null;
+			await Http.PostAsJsonAsync(apiUrl, user);
+			navManager.NavigateTo("/", true);
+		}
+		else
+		{
+            
+		}
+	}
+	private void NavigateToLoginComponent()
+	{
+		navManager.NavigateTo("/login", true);
+	}
+
+	public class User
+	{
+		public Guid UserId { get; set; }
+		public string Email { get; set; }
+		public string Password { get; set; }
+		public string PasswordConfirmation { get; set; }
+		public string FirstName { get; set; }
+		public string LastName { get; set; }
+		public string Phone { get; set; }
+		public DateTime BirthDay { get; set; }
+		public EnumLists.SocialClass SocialClass { get; set; }
+		public virtual Address Address { get; set; }
+	}
 
 }
