--- a/Client.Blazor/Pages/_Host.cshtml
+++ b/Client.Blazor/Pages/_Host.cshtml
@@ -12,8 +12,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client.Blazor</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+        <link href="css/site.css" rel="stylesheet" />*@
+
+    <link href="~/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/site.css" rel="stylesheet" />
+
+    <script src="~/scripts/jquery-3.3.1.slim.min.js"></script>
+    <script src="~/scripts/bootstrap.bundle.min.js"></script>
+
+    <link href="~/css/register.css" rel="stylesheet" />
+    <script src="~/scripts/dobpicker.js"></script>
+    <script src="~/scripts/register.js"></script>
+    
+
 </head>
 <body>
     <app>
@@ -32,5 +45,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+
 </body>
 </html>
