--- a/Client.Blazor/Shared/NavMenu.razor
+++ b/Client.Blazor/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@inject Blazored.SessionStorage.ISessionStorageService sessionStorage
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">TrotIS</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -14,7 +16,15 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="login">
-                <span class="oi oi-plus" aria-hidden="true"></span> Login
+                <span class="oi oi-plus" aria-hidden="true"></span>
+                @if (name != null)
+                {
+                    <span>Log out</span>
+                }
+                else
+                {
+                    <span>Login</span>
+                }
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -39,4 +49,22 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+
+    public string name = null;
+    protected async override void OnInitialized()
+    {
+        try
+        {
+            name = await sessionStorage.GetItemAsync<string>("firstname");
+            this.StateHasChanged();
+        }
+        catch
+        {
+
+        }
+
+    }
+
+
 }
