--- a/Client.Blazor/Pages/Login.razor
+++ b/Client.Blazor/Pages/Login.razor
@@ -3,31 +3,80 @@
 @using TrotIS.Shared
 @inject NavigationManager NavigationManager
 @inject Blazored.SessionStorage.ISessionStorageService sessionStorage
+<!-- Navbar-->
+<header class="header">
+    <nav class="navbar navbar-expand-lg navbar-light py-3">
+        <div class="container">
+            <!-- Navbar Brand -->
+            <a href="#" class="navbar-brand">
+                TrotIS logo
+                @*<img src="https://res.cloudinary.com/mhmd/image/upload/v1571398888/Group_1514_tjekh3_zkts1c.svg" alt="logo" width="150">*@
+            </a>
+        </div>
+    </nav>
+</header>
 
-<h3>Login</h3>
 
-<div class="row">
-    <div class="col-md-4">
-            <input type="email" name="email" @bind="user.Email" placeholder="Email..."><br>
-            <input type="password" name="password" @bind="user.Password" placeholder="Password.."><br>
-            <button @onclick="@LoginUser">Login</button>
+<div class="container">
+    <div class="row py-5 mt-4 align-items-center">
+        <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
+            <img src="https://res.cloudinary.com/mhmd/image/upload/v1569543678/form_d9sh6m.svg" alt="" class="img-fluid mb-3 d-none d-md-block">
+            <h1>Log in !</h1>
+        </div>
+
+        <!-- Registeration Form -->
+        <div class="col-md-7 col-lg-6 ml-auto">
+                <div class="row">
+
+
+
+                    <!-- Email Address -->
+                    <div class="input-group col-lg-12 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-envelope text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="email" type="email" name="email" @bind="user.Email" placeholder="Email Address" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+
+                    <!-- Password -->
+                    <div class="input-group col-lg-12 mb-4">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-lock text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="password" type="password" name="password" @bind="user.Password" placeholder="Password" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    <!-- Submit Button -->
+                    <div class="form-group col-lg-12 mx-auto mb-0">
+
+                        <button @onclick="@LoginUser" class="btn btn-primary btn-block py-2" >Login</button>
+                    </div>
+
+                    <!-- Line -->
+                    <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
+                        <div class="border-bottom w-100 ml-5"></div>
+                        @*<span class="px-2 small text-muted font-weight-bold text-muted">OR</span>*@
+                        <div class="border-bottom w-100 mr-5"></div>
+                    </div>
+
+                    <!-- Already Registered -->
+                    <div class="text-center w-100">
+                        <p class="text-muted font-weight-bold">Need an account?<a href="/register" class="text-primary ml-2">Register!</a></p>
+                    </div>
+
+                </div>
+        </div>
     </div>
-</div>
-
-<div>
-    Need an account?       <button class="btn btn-primary" @onclick="NavigateToRegisterComponent">
-        Register now!
-    </button>
 </div>
 
 @code {
     private string apiUrl = "http://localhost:5003/login";
 
-    private void NavigateToRegisterComponent()
-    {
-
-        NavigationManager.NavigateTo("/register", true);
-    }
     private User user = new User();
 
     private async void LoginUser()
