--- a/Client.Blazor/Shared/NavMenu.razor
+++ b/Client.Blazor/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@inject Blazored.SessionStorage.ISessionStorageService sessionStorage
-
+@inject NavigationManager NavigationManager
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">TrotIS</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -11,20 +11,20 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <i class="fa fa-home fa-lg" aria-hidden="true"></i> &nbsp; Home
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="locations">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Locations
+                <i class="fa fa-map-marker fa-lg" aria-hidden="true"></i> &nbsp;&nbsp;Locations
             </NavLink>
         </li>
         @if (email != null)
         {
             <li class="nav-item px-3">
-                <NavLink class="nav-link" href="login">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Log out
-                </NavLink>
+                <button @onclick="DeleteSession" class="nav-link">
+                    <i class="fa fa-sign-out fa-lg" aria-hidden="true"></i>&nbsp;Log out
+                </button>
             </li>
 
         }
@@ -33,12 +33,12 @@
         {
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="login">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Log in
+                    <i class="fa fa-sign-in fa-lg" aria-hidden="true"></i> &nbsp;Log in
                 </NavLink>
             </li>
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="register">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Register
+                    <i class="fa fa-user-plus fa-lg"></i> &nbsp;Register
                 </NavLink>
             </li>
 
@@ -86,6 +86,7 @@
             await sessionStorage.SetItemAsync("firstname", null);
             await sessionStorage.SetItemAsync("lastname", null);
             this.StateHasChanged();
+            NavigationManager.NavigateTo("/", true);
         }
         catch
         {
