--- a/Client.Blazor/wwwroot/css/site.css
+++ b/Client.Blazor/wwwroot/css/site.css
@@ -25,7 +25,12 @@ app {
     display: flex;
     align-items: center;
 }
-
+.butoon {
+    cursor: pointer;
+    border: none;
+    color: aliceblue;
+    background: transparent;
+}
 .main {
     flex: 1;
 }
