--- a/Client.Blazor/Pages/Login.razor
+++ b/Client.Blazor/Pages/Login.razor
@@ -26,50 +26,50 @@
 
         <!-- Registeration Form -->
         <div class="col-md-7 col-lg-6 ml-auto">
-                <div class="row">
+            <div class="row">
 
 
 
-                    <!-- Email Address -->
-                    <div class="input-group col-lg-12 mb-4">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text bg-white px-4 border-md border-right-0">
-                                <i class="fa fa-envelope text-muted"></i>
-                            </span>
-                        </div>
-                        <input id="email" type="email" name="email" @bind="user.Email" placeholder="Email Address" class="form-control bg-white border-left-0 border-md">
+                <!-- Email Address -->
+                <div class="input-group col-lg-12 mb-4">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text bg-white px-4 border-md border-right-0">
+                            <i class="fa fa-envelope text-muted"></i>
+                        </span>
                     </div>
-
-
-                    <!-- Password -->
-                    <div class="input-group col-lg-12 mb-4">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text bg-white px-4 border-md border-right-0">
-                                <i class="fa fa-lock text-muted"></i>
-                            </span>
-                        </div>
-                        <input id="password" type="password" name="password" @bind="user.Password" placeholder="Password" class="form-control bg-white border-left-0 border-md">
-                    </div>
-
-                    <!-- Submit Button -->
-                    <div class="form-group col-lg-12 mx-auto mb-0">
-
-                        <button @onclick="@LoginUser" class="btn btn-primary btn-block py-2" >Login</button>
-                    </div>
-
-                    <!-- Line -->
-                    <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
-                        <div class="border-bottom w-100 ml-5"></div>
-                        @*<span class="px-2 small text-muted font-weight-bold text-muted">OR</span>*@
-                        <div class="border-bottom w-100 mr-5"></div>
-                    </div>
-
-                    <!-- Already Registered -->
-                    <div class="text-center w-100">
-                        <p class="text-muted font-weight-bold">Need an account?<a href="/register" class="text-primary ml-2">Register!</a></p>
-                    </div>
-
+                    <input id="email" type="email" name="email" @bind="user.Email" placeholder="Email Address" class="form-control bg-white border-left-0 border-md" required>
                 </div>
+
+
+                <!-- Password -->
+                <div class="input-group col-lg-12 mb-4">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text bg-white px-4 border-md border-right-0">
+                            <i class="fa fa-lock text-muted"></i>
+                        </span>
+                    </div>
+                    <input id="password" type="password" name="password" @bind="user.Password" placeholder="Password" class="form-control bg-white border-left-0 border-md" required>
+                </div>
+
+                <!-- Submit Button -->
+                <div class="form-group col-lg-12 mx-auto mb-0">
+
+                    <button @onclick="@LoginUser" class="btn btn-primary btn-block py-2">Login</button>
+                </div>
+
+                <!-- Line -->
+                <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
+                    <div class="border-bottom w-100 ml-5"></div>
+                    @*<span class="px-2 small text-muted font-weight-bold text-muted">OR</span>*@
+                    <div class="border-bottom w-100 mr-5"></div>
+                </div>
+
+                <!-- Already Registered -->
+                <div class="text-center w-100">
+                    <p class="text-muted font-weight-bold">Need an account?<a href="/register" class="text-primary ml-2">Register!</a></p>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
@@ -98,6 +98,7 @@
 
     public class User
     {
+        
         public string Email { get; set; }
         public string Password { get; set; }
     }
